添加了新内容

--- a/page/css/home-pasge.css
+++ b/page/css/home-pasge.css
@@ -116,7 +116,6 @@
 
 #Mose .header {
   height: 158px;
-  overflow: hidden;
 }
 
 #Mose .header .inHeaderT {
@@ -202,4 +201,95 @@
   width: 100%;
   height: 34px;
   background: #fff;
+}
+
+#Mose .header .nav .navAll {
+  width: 190px;
+  height: 34px;
+  font-size: 12px;
+  color: #fff;
+  background: #ff3d3b url(../images/01/08.png) no-repeat 152px 14px;
+  float: left;
+  text-align: center;
+  line-height: 34px;
+}
+
+#Mose .header .nav .inNav {
+  width: 1010px;
+  border-bottom: 1px solid #FF3D3B;
+  float: left;
+  height: 33px;
+}
+
+#Mose .header .nav .inNav li {
+  float: left;
+  line-height: 34px;
+  padding-left: 20px;
+}
+
+#Mose .header .nav .inNav li a {
+  font-size: 15px;
+  font-weight: 600;
+  color: #000;
+}
+
+#Mose .header .nav .inNav li a:hover {
+  color: #FF3D3B;
+}
+
+#Mose .header .nav .inNav .inNav-dt a {
+  width: 120px;
+  display: block;
+  height: 34px;
+  background: url(../images/01/3013191871.gif) no-repeat 0px -1px;
+}
+
+#Mose .header .nav .inNav .inNav-tp a {
+  width: 110px;
+  display: block;
+  height: 34px;
+  background: url(../images/01/07.gif) no-repeat 0px -1px;
+}
+
+#Mose .header .serverMenu {
+  width: 190px;
+  height: 400px;
+  background: url(../images/01/类目bg_1.png);
+}
+
+#Mose .header .serverMenu li {
+  height: 50px;
+}
+
+#Mose .header .serverMenu li a {
+  font-size: 14px;
+  color: #fff;
+  line-height: 50px;
+  text-align: center;
+  display: block;
+  width: 100%;
+}
+
+#Mose .header .serverMenu li .x1 {
+  background: url(../images/01/icon2.png) no-repeat 15px -43px;
+}
+
+#Mose .header .serverMenu li .x1 {
+  background: url(../images/01/icon2.png) no-repeat 15px -43px;
+}
+
+#Mose .header .serverMenu li .x1 {
+  background: url(../images/01/icon2.png) no-repeat 15px -43px;
+}
+
+#Mose .header .serverMenu li .x1 {
+  background: url(../images/01/icon2.png) no-repeat 15px -43px;
+}
+
+#Mose .header .serverMenu li .x1 {
+  background: url(../images/01/icon2.png) no-repeat 15px -43px;
+}
+
+#Mose .header .serverMenu li .x1 {
+  background: url(../images/01/icon2.png) no-repeat 15px -43px;
 }
