--- a/page/css/home-pasge.scss
+++ b/page/css/home-pasge.scss
@@ -122,7 +122,7 @@
     // 头部和导航
     .header {
         height: 158px;
-        overflow: hidden;
+        // overflow: hidden;
 
 
 
@@ -213,9 +213,113 @@
             width: 100%;
             height: 34px;
             background: #fff;
+
+            .navAll {
+                width: 190px;
+                height: 34px;
+                font-size: 12px;
+                color: #fff;
+                background: #ff3d3b url(../images/01/08.png)no-repeat 152px 14px;
+                float: left;
+                text-align: center;
+                line-height: 34px;
+            }
+
+            .inNav {
+                width: 1010px;
+                border-bottom: 1px solid #FF3D3B;
+                float: left;
+                height: 33px;
+
+                li {
+                    float: left;
+                    line-height: 34px;
+                    padding-left: 20px;
+
+                    a {
+                        font-size: 15px;
+                        font-weight: 600;
+                        color: #000;
+
+                        &:hover {
+                            color: #FF3D3B;
+                        }
+                    }
+
+                }
+
+                .inNav-dt a {
+                    width: 120px;
+                    display: block;
+                    height: 34px;
+                    background: url(../images/01/3013191871.gif)no-repeat 0px -1px;
+                    // background-size: 100%;
+                    // margin-bottom: 2px;
+                }
+
+                .inNav-tp a {
+                    width: 110px;
+                    display: block;
+                    height: 34px;
+                    background: url(../images/01/07.gif)no-repeat 0px -1px;
+
+                }
+            }
+
+
         }
 
+        .serverMenu {
+            width: 190px;
+            height: 400px;
+            background: url(../images/01/类目bg_1.png);
 
+            li {
+                height: 50px;
+
+                a {
+                    font-size: 14px;
+                    color: #fff;
+                    line-height: 50px;
+                    text-align: center;
+                    display: block;
+                    width: 100%;
+                }
+
+                .x1 {
+                    background: url(../images/01/icon2.png)no-repeat 15px -43px;
+                }
+
+                .x2 {
+                    background: url(../images/01/icon2.png)no-repeat 15px -43px;
+                }
+
+                .x3 {
+                    background: url(../images/01/icon2.png)no-repeat 15px -43px;
+                }
+
+                .x4 {
+                    background: url(../images/01/icon2.png)no-repeat 15px -43px;
+                }
+
+                .x5 {
+                    background: url(../images/01/icon2.png)no-repeat 15px -43px;
+                }
+
+                .x6 {
+                    background: url(../images/01/icon2.png)no-repeat 15px -43px;
+                }
+
+                .x7 {
+                    background: url(../images/01/icon2.png)no-repeat 15px -43px;
+                }
+
+                .x8 {
+                    background: url(../images/01/icon2.png)no-repeat 15px -43px;
+                }
+            }
+        }
     }
+}
 
 }
