--- a/page/css/home-pasge.css
+++ b/page/css/home-pasge.css
@@ -2,7 +2,6 @@
 #Mose {
   width: 100%;
   height: 100%;
-  background: #f1f1f1;
 }
 
 #Mose .content {
@@ -116,6 +115,7 @@
 
 #Mose .header {
   height: 158px;
+  position: relative;
 }
 
 #Mose .header .inHeaderT {
@@ -228,7 +228,7 @@
 }
 
 #Mose .header .nav .inNav li a {
-  font-size: 15px;
+  font-size: 13px;
   font-weight: 600;
   color: #000;
 }
@@ -259,6 +259,15 @@
 
 #Mose .header .serverMenu li {
   height: 50px;
+  width: 100%;
+}
+
+#Mose .header .serverMenu li:hover {
+  background: #fff;
+}
+
+#Mose .header .serverMenu li:hover a {
+  color: #FF3D3B;
 }
 
 #Mose .header .serverMenu li a {
@@ -274,22 +283,136 @@
   background: url(../images/01/icon2.png) no-repeat 15px -43px;
 }
 
-#Mose .header .serverMenu li .x1 {
-  background: url(../images/01/icon2.png) no-repeat 15px -43px;
+#Mose .header .serverMenu li .x1:hover {
+  background: url(../images/01/icon2.png) no-repeat 15px 7px;
 }
 
-#Mose .header .serverMenu li .x1 {
-  background: url(../images/01/icon2.png) no-repeat 15px -43px;
+#Mose .header .serverMenu li .x2 {
+  background: url(../images/01/icon2.png) no-repeat 15px -143px;
 }
 
-#Mose .header .serverMenu li .x1 {
-  background: url(../images/01/icon2.png) no-repeat 15px -43px;
+#Mose .header .serverMenu li .x2:hover {
+  background: url(../images/01/icon2.png) no-repeat 15px -93px;
 }
 
-#Mose .header .serverMenu li .x1 {
-  background: url(../images/01/icon2.png) no-repeat 15px -43px;
+#Mose .header .serverMenu li .x3 {
+  background: url(../images/01/icon2.png) no-repeat 15px -240px;
 }
 
-#Mose .header .serverMenu li .x1 {
-  background: url(../images/01/icon2.png) no-repeat 15px -43px;
+#Mose .header .serverMenu li .x3:hover {
+  background: url(../images/01/icon2.png) no-repeat 15px -190px;
+}
+
+#Mose .header .serverMenu li .x4 {
+  background: url(../images/01/icon2.png) no-repeat 15px -341px;
+}
+
+#Mose .header .serverMenu li .x4:hover {
+  background: url(../images/01/icon2.png) no-repeat 15px -291px;
+}
+
+#Mose .header .serverMenu li .x5 {
+  background: url(../images/01/icon2.png) no-repeat 15px -441px;
+}
+
+#Mose .header .serverMenu li .x5:hover {
+  background: url(../images/01/icon2.png) no-repeat 15px -391px;
+}
+
+#Mose .header .serverMenu li .x6 {
+  background: url(../images/01/icon2.png) no-repeat 15px -542px;
+}
+
+#Mose .header .serverMenu li .x6:hover {
+  background: url(../images/01/icon2.png) no-repeat 15px -492px;
+}
+
+#Mose .header .serverMenu li .x7 {
+  background: url(../images/01/icon2.png) no-repeat 15px -641px;
+}
+
+#Mose .header .serverMenu li .x7:hover {
+  background: url(../images/01/icon2.png) no-repeat 15px -591px;
+}
+
+#Mose .header .serverMenu li .x8 {
+  background: url(../images/01/icon2.png) no-repeat 15px -741px;
+}
+
+#Mose .header .serverMenu li .x8:hover {
+  background: url(../images/01/icon2.png) no-repeat 15px -691px;
+}
+
+#Mose .header .inServerMenuList .inServerMenuB {
+  width: 607px;
+  height: 396px;
+  border-top: #ccc solid 1px;
+  border-bottom: #ccc solid 1px;
+  border-right: #ccc solid 1px;
+  background: #fff;
+  position: absolute;
+  top: 157px;
+  left: 265px;
+  padding: 20px 20px;
+  box-sizing: border-box;
+  display: none;
+}
+
+#Mose .header .inServerMenuList .inServerMenuB li {
+  margin-bottom: 12px;
+}
+
+#Mose .header .inServerMenuList .inServerMenuB li h3 {
+  font-size: 14px;
+}
+
+#Mose .header .inServerMenuList .inServerMenuB li a {
+  font-size: 12px;
+  padding-right: 2px;
+  line-height: 12px;
+}
+
+#Mose .main {
+  overflow: hidden;
+}
+
+#Mose .main .ban_wrap {
+  width: 100%;
+  height: 400px;
+  background: #fff;
+}
+
+#Mose .main .ban_wrap .banner {
+  float: left;
+}
+
+#Mose .main .ban_wrap .smallBanner {
+  float: left;
+}
+
+#Mose .main .hotSales .hot img {
+  width: 190px;
+  float: left;
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+}
+
+#Mose .main .hotSales .hotPic {
+  float: left;
+  width: 250px;
+  overflow: hidden;
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+}
+
+#Mose .main .hotSales .hotPic:hover img {
+  transform: scale(1.01);
+}
+
+#Mose .main .hotSales .hotPic img {
+  width: 250px;
+  float: left;
+  overflow: hidden;
 }
