--- a/page/css/home-pasge.scss
+++ b/page/css/home-pasge.scss
@@ -1,7 +1,7 @@
 #Mose {
     width: 100%;
     height: 100%;
-    background: #f1f1f1;
+    // background: #f1f1f1;
 
     .content {
         width: 1200px;
@@ -122,8 +122,7 @@
     // 头部和导航
     .header {
         height: 158px;
-        // overflow: hidden;
-
+        position: relative;
 
 
         .inHeaderT {
@@ -237,7 +236,7 @@
                     padding-left: 20px;
 
                     a {
-                        font-size: 15px;
+                        font-size: 13px;
                         font-weight: 600;
                         color: #000;
 
@@ -276,6 +275,15 @@
 
             li {
                 height: 50px;
+                width: 100%;
+
+                &:hover {
+                    background: #fff;
+                }
+
+                &:hover a {
+                    color: #FF3D3B;
+                }
 
                 a {
                     font-size: 14px;
@@ -288,38 +296,153 @@
 
                 .x1 {
                     background: url(../images/01/icon2.png)no-repeat 15px -43px;
+
+                    &:hover {
+                        background: url(../images/01/icon2.png)no-repeat 15px 7px;
+                    }
                 }
 
                 .x2 {
-                    background: url(../images/01/icon2.png)no-repeat 15px -43px;
+                    background: url(../images/01/icon2.png)no-repeat 15px -143px;
+
+                    &:hover {
+                        background: url(../images/01/icon2.png)no-repeat 15px -93px;
+                    }
                 }
 
                 .x3 {
-                    background: url(../images/01/icon2.png)no-repeat 15px -43px;
+                    background: url(../images/01/icon2.png)no-repeat 15px -240px;
+
+                    &:hover {
+                        background: url(../images/01/icon2.png)no-repeat 15px -190px;
+                    }
                 }
 
                 .x4 {
-                    background: url(../images/01/icon2.png)no-repeat 15px -43px;
+                    background: url(../images/01/icon2.png)no-repeat 15px -341px;
+
+                    &:hover {
+                        background: url(../images/01/icon2.png)no-repeat 15px -291px;
+                    }
                 }
 
                 .x5 {
-                    background: url(../images/01/icon2.png)no-repeat 15px -43px;
+                    background: url(../images/01/icon2.png)no-repeat 15px -441px;
+
+                    &:hover {
+                        background: url(../images/01/icon2.png)no-repeat 15px -391px;
+                    }
                 }
 
                 .x6 {
-                    background: url(../images/01/icon2.png)no-repeat 15px -43px;
+                    background: url(../images/01/icon2.png)no-repeat 15px -542px;
+
+                    &:hover {
+                        background: url(../images/01/icon2.png)no-repeat 15px -492px;
+                    }
                 }
 
                 .x7 {
-                    background: url(../images/01/icon2.png)no-repeat 15px -43px;
+                    background: url(../images/01/icon2.png)no-repeat 15px -641px;
+
+                    &:hover {
+                        background: url(../images/01/icon2.png)no-repeat 15px -591px;
+                    }
                 }
 
                 .x8 {
-                    background: url(../images/01/icon2.png)no-repeat 15px -43px;
+                    background: url(../images/01/icon2.png)no-repeat 15px -741px;
+
+                    &:hover {
+                        background: url(../images/01/icon2.png)no-repeat 15px -691px;
+                    }
                 }
             }
         }
-    }
-}
 
+        .inServerMenuList {
+
+            .inServerMenuB {
+                width: 607px;
+                height: 396px;
+                border-top: #ccc solid 1px;
+                border-bottom: #ccc solid 1px;
+                border-right: #ccc solid 1px;
+                background: #fff;
+                position: absolute;
+                top: 157px;
+                left: 265px;
+                padding: 20px 20px;
+                box-sizing: border-box;
+                display: none;
+
+                li {
+                    margin-bottom: 12px;
+
+                    h3 {
+                        font-size: 14px;
+                    }
+
+                    a {
+                        font-size: 12px;
+                        padding-right: 2px;
+                        line-height: 12px;
+                    }
+                }
+
+            }
+        }
+    }
+
+    // 内容部分
+    .main {
+        overflow: hidden;
+
+        .ban_wrap {
+            width: 100%;
+            height: 400px;
+            background: #fff;
+
+            .banner {
+                float: left;
+            }
+
+            .smallBanner {
+                float: left;
+            }
+        }
+
+        .hotSales {
+
+            .hot img {
+                width: 190px;
+                float: left;
+                border-top: 1px solid #ccc;
+                border-bottom: 1px solid #ccc;
+                border-right: 1px solid #ccc;
+            }
+
+            .hotPic {
+                float: left;
+                width: 250px;
+                overflow: hidden;
+                border-top: 1px solid #ccc;
+                border-bottom: 1px solid #ccc;
+                border-right: 1px solid #ccc;
+
+                &:hover img {
+                    transform: scale(1.01);
+
+                }
+
+                img {
+                    width: 250px;
+                    float: left;
+                    overflow: hidden;
+                }
+            }
+
+
+        }
+    }
 }
