--- a/page/css/home-pasge.css
+++ b/page/css/home-pasge.css
@@ -416,3 +416,52 @@
   float: left;
   overflow: hidden;
 }
+
+#Mose .main .bandSales {
+  margin-top: 20px;
+}
+
+#Mose .main .bandSales h2 {
+  width: 100%;
+  height: 44px;
+  text-align: left;
+  font-size: 18px;
+  color: #000;
+  font-weight: bold;
+}
+
+#Mose .main .bandSales h2 span {
+  font-size: 14px;
+  color: #000;
+}
+
+#Mose .main .bandSales .inBandSalesMain .inBandSalesMainL {
+  width: 191px;
+  float: left;
+}
+
+#Mose .main .bandSales .inBandSalesMain .inBandSalesMainC {
+  float: left;
+  width: 817px;
+  height: 238px;
+}
+
+#Mose .main .bandSales .inBandSalesMain .inBandSalesMainC ul {
+  overflow: hidden;
+  border-top: 1px solid #ccc;
+  border-left: 1px solid #ccc;
+}
+
+#Mose .main .bandSales .inBandSalesMain .inBandSalesMainC ul li {
+  width: 204px;
+  box-sizing: border-box;
+  float: left;
+  border-bottom: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+}
+
+#Mose .main .bandSales .inBandSalesMain .inBandSalesMainR {
+  width: 191px;
+  overflow: hidden;
+  float: right;
+}
