--- a/page/css/home-pasge.scss
+++ b/page/css/home-pasge.scss
@@ -444,5 +444,58 @@
 
 
         }
+
+        .bandSales {
+            margin-top: 20px;
+
+            h2 {
+                width: 100%;
+                height: 44px;
+                text-align: left;
+                font-size: 18px;
+                color: #000;
+                font-weight: bold;
+
+                span {
+                    font-size: 14px;
+                    color: #000;
+                }
+            }
+
+            .inBandSalesMain {
+                .inBandSalesMainL {
+                    width: 191px;
+                    float: left;
+                }
+
+                .inBandSalesMainC {
+                    float: left;
+                    width: 817px;
+                    height: 238px;
+
+                    ul {
+                        overflow: hidden;
+                        border-top: 1px solid #ccc;
+                        border-left: 1px solid #ccc;
+
+                        li {
+                            width: 204px;
+                            box-sizing: border-box;
+                            float: left;
+                            border-bottom: 1px solid #ccc;
+                            border-right: 1px solid #ccc;
+                        }
+                    }
+
+
+                }
+
+                .inBandSalesMainR {
+                    width: 191px;
+                    overflow: hidden;
+                    float: right;
+                }
+            }
+        }
     }
 }
