--- a/page/css/home-pasge.scss
+++ b/page/css/home-pasge.scss
@@ -479,11 +479,21 @@
                         border-left: 1px solid #ccc;
 
                         li {
+                            overflow: hidden;
                             width: 204px;
                             box-sizing: border-box;
                             float: left;
                             border-bottom: 1px solid #ccc;
                             border-right: 1px solid #ccc;
+
+                            img {
+                                transition: transform 0.4s;
+                            }
+
+
+                            img:hover {
+                                transform: translateX(-5px);
+                            }
                         }
                     }
 
