--- a/page/css/home-pasge.css
+++ b/page/css/home-pasge.css
@@ -374,6 +374,8 @@
 
 #Mose .main {
   overflow: hidden;
+  padding-bottom: 120px;
+  background: #f5f5f5;
 }
 
 #Mose .main .ban_wrap {
@@ -388,6 +390,10 @@
 
 #Mose .main .ban_wrap .smallBanner {
   float: left;
+}
+
+#Mose .main .hotSales {
+  width: 100%;
 }
 
 #Mose .main .hotSales .hot img {
@@ -418,10 +424,12 @@
 }
 
 #Mose .main .bandSales {
-  margin-top: 20px;
+  width: 100%;
+  background: #f5f5f5;
 }
 
 #Mose .main .bandSales h2 {
+  margin-top: 20px;
   width: 100%;
   height: 44px;
   text-align: left;
@@ -473,4 +481,196 @@
   width: 191px;
   overflow: hidden;
   float: right;
+}
+
+#Mose .main .floor {
+  width: 100%;
+  background: #f5f5f5;
+}
+
+#Mose .main .floor .floor_1 {
+  width: 100%;
+  margin-top: 20px;
+  background: #f5f5f5;
+}
+
+#Mose .main .floor .floor_1 .f_title {
+  width: 100%;
+  height: 38px;
+}
+
+#Mose .main .floor .floor_1 .f_title .f_ico {
+  display: inline-block;
+  width: 30px;
+  height: 38px;
+  line-height: 38px;
+  text-align: center;
+  color: #ef0a4a;
+  background: url(../images/01/001.png);
+  margin-right: 15px;
+}
+
+#Mose .main .floor .floor_1 .f_title b {
+  font-size: 18px;
+  line-height: 38px;
+  display: inline-block;
+  vertical-align: bottom;
+  font-weight: normal;
+  color: #f02e4b;
+}
+
+#Mose .main .floor .floor_1 .f_con {
+  width: 100%;
+  height: 448px;
+  border-top: 2px solid #ef0a4a;
+  margin-top: 5px;
+}
+
+#Mose .main .floor .floor_1 .f_con .f_con_l {
+  float: left;
+  width: 299px;
+  height: 448px;
+  position: relative;
+  overflow: hidden;
+  background: #ccc;
+}
+
+#Mose .main .floor .floor_1 .f_con .f_con_r li {
+  float: left;
+  margin-right: 1px;
+  margin-bottom: 1px;
+}
+
+#Mose .footer {
+  width: 100%;
+  height: 540px;
+  background: #efefef;
+  border-top: #ff3333 solid 2px;
+  padding-top: 24px;
+  overflow: hidden;
+}
+
+#Mose .footer .inFooter {
+  width: 1200px;
+  margin: 0px auto;
+  height: 214px;
+  position: relative;
+}
+
+#Mose .footer .inFooter .inFooterInfo ul {
+  float: left;
+  width: 152px;
+}
+
+#Mose .footer .inFooter .inFooterInfo ul li {
+  text-align: center;
+}
+
+#Mose .footer .inFooter .inFooterInfo ul li a {
+  font-size: 12px;
+  height: 22px;
+  color: #3c3c3c;
+}
+
+#Mose .footer .inFooter .inFooterInfo ul li:hover a {
+  color: #f02e4b;
+}
+
+#Mose .footer .inFooter .inFooterInfo ul .bt {
+  margin-bottom: 18px;
+  border-right: 1px #cccccc solid;
+}
+
+#Mose .footer .inFooter .inFooterInfo ul .bt h3 {
+  font-size: 14px;
+  font-weight: bold;
+  height: 18px;
+}
+
+#Mose .footer .inFooter .inFooterKefu {
+  width: 240px;
+  height: 160px;
+  position: absolute;
+  right: 199px;
+  top: 0px;
+  border-right: 1px solid #ccc;
+  border-left: 1px solid #ccc;
+}
+
+#Mose .footer .inFooter .inFooterKefu h3 {
+  text-align: center;
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+#Mose .footer .inFooter .inFooterKefu p {
+  font-size: 12px;
+  text-align: center;
+}
+
+#Mose .footer .inFooter .inFooterKefu .q1 {
+  margin-bottom: 10px;
+}
+
+#Mose .footer .inFooter .inFooterKefu .q3 {
+  text-align: center;
+}
+
+#Mose .footer .inFooter .inFooterKefu .q3 img {
+  margin-bottom: 5px;
+}
+
+#Mose .footer .inFooter .inFootercode {
+  width: 196px;
+  float: right;
+  text-align: center;
+}
+
+#Mose .footer .inFooter .inFootercode h3 {
+  text-align: center;
+  font-size: 14px;
+  font-weight: bold;
+  margin: 5px 0px;
+}
+
+#Mose .footer .inFooter .inFootercode p {
+  font-size: 12px;
+  margin-left: 45px;
+  width: 110px;
+  text-align: center;
+  line-height: 22px;
+}
+
+#Mose .footer .footService {
+  background: #cccccc;
+  width: 100%;
+  text-align: center;
+}
+
+#Mose .footer .copyRight_con p {
+  font-size: 12px;
+  color: #333;
+  line-height: 30px;
+  padding: 10px 0;
+  text-align: center;
+}
+
+#Mose .footer .copyRight_con p img {
+  margin-bottom: 3px;
+}
+
+#Mose .footer .copyRight_con .a8 ul {
+  width: 1066px;
+  margin: auto;
+  overflow: hidden;
+}
+
+#Mose .footer .copyRight_con .a8 ul li {
+  float: left;
+  margin: 0px 20px;
+}
+
+#Mose .footer .copyRight_con .a8 span {
+  margin: 0px 10px;
 }
