--- a/page/css/home-pasge.scss
+++ b/page/css/home-pasge.scss
@@ -397,6 +397,8 @@
     // 内容部分
     .main {
         overflow: hidden;
+        padding-bottom: 120px;
+        background: #f5f5f5;
 
         .ban_wrap {
             width: 100%;
@@ -413,6 +415,8 @@
         }
 
         .hotSales {
+            width: 100%;
+            // background: #f5f5f5;
 
             .hot img {
                 width: 190px;
@@ -446,9 +450,12 @@
         }
 
         .bandSales {
-            margin-top: 20px;
+
+            width: 100%;
+            background: #f5f5f5;
 
             h2 {
+                margin-top: 20px;
                 width: 100%;
                 height: 44px;
                 text-align: left;
@@ -504,6 +511,217 @@
                     width: 191px;
                     overflow: hidden;
                     float: right;
+                }
+            }
+        }
+
+        .floor {
+            width: 100%;
+            background: #f5f5f5;
+
+            .floor_1 {
+                width: 100%;
+                margin-top: 20px;
+                background: #f5f5f5;
+
+                .f_title {
+
+                    width: 100%;
+                    height: 38px;
+
+                    .f_ico {
+                        display: inline-block;
+                        width: 30px;
+                        height: 38px;
+                        line-height: 38px;
+                        text-align: center;
+                        color: #ef0a4a;
+                        background: url(../images/01/001.png);
+                        margin-right: 15px;
+                    }
+
+                    b {
+                        font-size: 18px;
+                        line-height: 38px;
+                        display: inline-block;
+                        vertical-align: bottom;
+                        font-weight: normal;
+                        color: #f02e4b;
+                    }
+                }
+
+                .f_con {
+                    width: 100%;
+                    height: 448px;
+                    border-top: 2px solid #ef0a4a;
+                    margin-top: 5px;
+
+                    .f_con_l {
+                        float: left;
+                        width: 299px;
+                        height: 448px;
+                        position: relative;
+                        overflow: hidden;
+                        background: #ccc;
+                    }
+
+                    .f_con_r {
+
+                        li {
+                            float: left;
+                            margin-right: 1px;
+                            margin-bottom: 1px;
+                        }
+                    }
+                }
+
+            }
+        }
+
+    }
+
+    // 底部部分
+    .footer {
+        width: 100%;
+        height: 540px;
+        background: #efefef;
+        border-top: #ff3333 solid 2px;
+        padding-top: 24px;
+        overflow: hidden;
+
+        .inFooter {
+            width: 1200px;
+            margin: 0px auto;
+            height: 214px;
+            position: relative;
+
+            .inFooterInfo {
+
+               ul {
+                    float: left;
+                    width: 152px;
+
+                    li {
+                        text-align: center;
+
+                        a {
+                            font-size: 12px;
+                            height: 22px;
+                            color: #3c3c3c;
+                        }
+
+                        &:hover a {
+                            color: #f02e4b;
+
+                        }
+                    }
+
+                    .bt {
+                        h3 {
+                            font-size: 14px;
+                            font-weight: bold;
+                            height: 18px;
+                        }
+
+                        margin-bottom: 18px;
+                        border-right: 1px #cccccc solid;
+                    }
+                }
+            }
+
+            .inFooterKefu {
+                width: 240px;
+                height: 160px;
+                position: absolute;
+                right: 199px;
+                top: 0px;
+                border-right: 1px solid #ccc;
+                border-left: 1px solid #ccc;
+
+                h3 {
+                    text-align: center;
+                    font-size: 14px;
+                    font-weight: bold;
+                    margin-bottom: 5px;
+                }
+
+                p {
+                    font-size: 12px;
+                    text-align: center;
+                }
+
+                .q1 {
+                    margin-bottom: 10px;
+                }
+
+                .q3 {
+                    text-align: center;
+
+                    img {
+                        margin-bottom: 5px;
+                    }
+                }
+            }
+
+            .inFootercode {
+                width: 196px;
+                float: right;
+                text-align: center;
+
+
+                h3 {
+                    text-align: center;
+                    font-size: 14px;
+                    font-weight: bold;
+                    margin: 5px 0px;
+                }
+
+                p {
+                    font-size: 12px;
+                    margin-left: 45px;
+                    width: 110px;
+                    text-align: center;
+                    line-height: 22px;
+                }
+            }
+
+
+        }
+
+        .footService {
+            background: #cccccc;
+            width: 100%;
+            text-align: center;
+        }
+
+        .copyRight_con {
+            p {
+                font-size: 12px;
+                color: #333;
+                line-height: 30px;
+                padding: 10px 0;
+                text-align: center;
+
+                img {
+                    margin-bottom: 3px;
+                }
+
+            }
+
+            .a8 {
+                ul {
+                    width: 1066px;
+                    margin: auto;
+                    overflow: hidden;
+
+                    li {
+                        float: left;
+                        margin: 0px 20px;
+                    }
+                }
+
+                span {
+                    margin: 0px 10px;
                 }
             }
         }
