--- a/page/css/home-pasge.css
+++ b/page/css/home-pasge.css
@@ -541,6 +541,38 @@
   margin-bottom: 1px;
 }
 
+#Mose .main .floor .jump {
+  position: fixed;
+  top: 10%;
+}
+
+#Mose .main .floor .jump ul {
+  width: 64px;
+  height: 400px;
+  margin-left: 10px;
+}
+
+#Mose .main .floor .jump ul li {
+  display: block;
+  background-color: #fff;
+  height: 39px;
+  width: 54px;
+  border-top: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+  border-left: 1px solid #ddd;
+  text-align: center;
+  line-height: 20px;
+  padding: 0px 4px 0px 4px;
+  color: #999;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 12px;
+}
+
+#Mose .main .floor .jump ul li:hover {
+  background: #FF3D3B;
+}
+
 #Mose .footer {
   width: 100%;
   height: 540px;
