--- a/page/css/home-pasge.css
+++ b/page/css/home-pasge.css
@@ -573,6 +573,10 @@
   background: #FF3D3B;
 }
 
+#Mose .main .floor .jump ul .wtt {
+  background: #FF3D3B;
+}
+
 #Mose .footer {
   width: 100%;
   height: 540px;
