--- a/page/css/home-pasge.scss
+++ b/page/css/home-pasge.scss
@@ -524,6 +524,7 @@
                 margin-top: 20px;
                 background: #f5f5f5;
 
+
                 .f_title {
 
                     width: 100%;
@@ -611,6 +612,10 @@
                             background: #FF3D3B;
                         }
 
+                    }
+
+                    .wtt {
+                        background: #FF3D3B;
                     }
 
 
