--- a/page/css/register.scss
+++ b/page/css/register.scss
@@ -1,8 +1,4 @@
-#Mose {
-    width: 100%;
-    height: 100%;
-    // background: #f1f1f1;
-
+.register {
     .content {
         width: 1200px;
         // background: #ccc;
@@ -272,6 +268,7 @@
             width: 190px;
             height: 400px;
             background: url(../images/01/类目bg_1.png);
+            display: none;
 
             li {
                 height: 50px;
@@ -394,237 +391,233 @@
         }
     }
 
-    // 内容部分
-    .main {
-        overflow: hidden;
-        padding-bottom: 120px;
-        background: #f5f5f5;
+    // 注册和登录
+    .login {
+        width: 100%;
+        height: 717px;
 
-        .ban_wrap {
-            width: 100%;
-            height: 400px;
-            background: #fff;
+        .register_L {
+            width: 550px;
+            margin-left: 0%;
+            float: left;
 
-            .banner {
-                float: left;
-            }
-
-            .smallBanner {
-                float: left;
-            }
-        }
-
-        .hotSales {
-            width: 100%;
-            // background: #f5f5f5;
-
-            .hot img {
-                width: 190px;
-                float: left;
-                border-top: 1px solid #ccc;
-                border-bottom: 1px solid #ccc;
-                border-right: 1px solid #ccc;
-            }
-
-            .hotPic {
-                float: left;
-                width: 250px;
-                overflow: hidden;
-                border-top: 1px solid #ccc;
-                border-bottom: 1px solid #ccc;
-                border-right: 1px solid #ccc;
-
-                &:hover img {
-                    transform: scale(1.01);
-
-                }
-
-                img {
-                    width: 250px;
-                    float: left;
-                    overflow: hidden;
-                }
-            }
-
-
-        }
-
-        .bandSales {
-
-            width: 100%;
-            background: #f5f5f5;
-
-            h2 {
-                margin-top: 20px;
+            h3 {
                 width: 100%;
-                height: 44px;
-                text-align: left;
-                font-size: 18px;
-                color: #000;
-                font-weight: bold;
-
-                span {
-                    font-size: 14px;
-                    color: #000;
-                }
+                text-align: center;
+                font-size: 24px;
+                color: #999999;
+                margin-top: 15px;
+                padding-bottom: 20px;
             }
 
-            .inBandSalesMain {
-                .inBandSalesMainL {
-                    width: 191px;
-                    float: left;
-                }
+            table {
+                td {
+                    text-align: right;
+                    padding-bottom: 15px;
+                    padding-left: 10px;
+                    line-height: 100%;
+                    vertical-align: middle;
 
-                .inBandSalesMainC {
-                    float: left;
-                    width: 817px;
-                    height: 238px;
-
-                    ul {
-                        overflow: hidden;
-                        border-top: 1px solid #ccc;
-                        border-left: 1px solid #ccc;
-
-                        li {
-                            overflow: hidden;
-                            width: 204px;
-                            box-sizing: border-box;
-                            float: left;
-                            border-bottom: 1px solid #ccc;
-                            border-right: 1px solid #ccc;
-
-                            img {
-                                width: 210px;
-                                height: 79px;
-                                transition: transform 0.4s;
-                            }
-
-
-                            img:hover {
-                                transform: translateX(-5px);
-                            }
-                        }
-                    }
-
-
-                }
-
-                .inBandSalesMainR {
-                    width: 191px;
-                    overflow: hidden;
-                    float: right;
-                }
-            }
-        }
-
-        .floor {
-            width: 100%;
-            background: #f5f5f5;
-
-            .floor_1 {
-                width: 100%;
-                margin-top: 20px;
-                background: #f5f5f5;
-
-
-                .f_title {
-
-                    width: 100%;
-                    height: 38px;
-
-                    .f_ico {
-                        display: inline-block;
-                        width: 30px;
-                        height: 38px;
-                        line-height: 38px;
-                        text-align: center;
-                        color: #ef0a4a;
-                        background: url(../images/01/001.png);
-                        margin-right: 15px;
-                    }
-
-                    b {
+                    button {
+                        position: absolute;
+                        width: 306px;
+                        line-height: 32px;
                         font-size: 18px;
-                        line-height: 38px;
-                        display: inline-block;
-                        vertical-align: bottom;
-                        font-weight: normal;
-                        color: #f02e4b;
-                    }
-                }
-
-                .f_con {
-                    width: 100%;
-                    height: 448px;
-                    border-top: 2px solid #ef0a4a;
-                    margin-top: 5px;
-
-                    .f_con_l {
+                        color: #999999;
                         float: left;
-                        width: 299px;
-                        height: 448px;
-                        position: relative;
-                        overflow: hidden;
-                        background: #ccc;
+                        margin-left: 28px;
+                        background: #fff;
+                        border: #cccccc solid 1px;
+                        cursor: pointer;
                     }
 
-                    .f_con_r {
+                    .lbl_msg {
+                        text-align: center;
+                        display: block;
+                        margin-top: 40px;
+                        color: Red;
+                        font-size: 10px;
+                        opacity: 0;
+                    }
 
-                        li {
-                            float: left;
-                            margin-right: 1px;
-                            margin-bottom: 1px;
-                        }
+                    .ew {
+                        font-size: 12px;
+                        color: #333;
+                    }
+
+                    .TY {
+                        font-size: 12px;
+                        font-weight: bold;
+                        padding-left: 120px;
+                        margin-right: 265px;
+                    }
+
+                    .TU {
+                        margin-right: 32px;
                     }
                 }
 
-            }
+                .table-tit {
+                    width: 140px;
+                    float: left;
+                    padding-top: 20px;
+                    color: #666;
+                    font-size: 12px;
+                }
 
-            .jump {
-                position: fixed;
-                top: 25%;
+                .login-1 {
+                    width: 310px;
+                    height: 30px;
+                    line-height: 30px;
+                    background-color: #FFFFFF;
+                    border: #cccccc solid 1px;
+                    padding-left: 20px;
+                    color: #666666;
+                    font-size: 15px;
+                }
 
-                ul {
-                    width: 64px;
-                    height: 400px;
-
-                    margin-left: 10px;
-
-
-
-                    li {
-                        display: block;
-                        background-color: #fff;
-                        height: 39px;
-                        width: 54px;
-                        border-top: 1px solid #ddd;
-                        border-right: 1px solid #ddd;
-                        border-left: 1px solid #ddd;
-                        text-align: center;
-                        line-height: 20px;
-                        padding: 0px 4px 0px 4px;
-                        color: #999;
-                        text-decoration: none;
-                        font-weight: bold;
-                        font-size: 12px;
-
-
-
-                        &:hover {
-                            background: #FF3D3B;
-                        }
-
-                    }
-
-                    .wtt {
-                        background: #FF3D3B;
-                    }
-
-
+                .login-2 {
+                    width: 310px;
+                    height: 30px;
+                    line-height: 30px;
+                    background-color: #FFFFFF;
+                    border: #cccccc solid 1px;
+                    padding-left: 20px;
+                    color: #666666;
+                    font-size: 15px;
                 }
             }
         }
 
+        .register_R {
+            width: 50%;
+            height: 607px;
+            float: left;
+            text-align: left;
+            margin-left: 20px;
+
+            .tit {
+                width: 100%;
+                text-align: center;
+                font-size: 24px;
+                color: #999999;
+                margin-top: 15px;
+                padding-bottom: 5px;
+            }
+
+            .login-nav {
+                width: 250px;
+                margin: 0 auto;
+                margin-top: 10px;
+                text-align: center;
+                padding-left: 50px;
+                overflow: hidden;
+
+                li {
+                    text-align: center;
+                    float: left;
+                    width: 100px;
+                    line-height: 30px;
+                    border: solid 1px #ddd;
+                    border-radius: 0px 8px 8px 0px;
+
+                    &:nth-child(1) {
+                        border-radius: 8px 0px 0px 8px;
+                        border-right: none;
+                    }
+
+
+                }
+
+                .selected {
+                    background: #EC8D36;
+                    color: #fff;
+                    border: solid 1px #EC8D36;
+                }
+
+            }
+
+
+
+
+
+            .mailbox {
+                margin-top: 25px;
+                overflow: hidden;
+
+                .mailbox_to {
+                    height: 67px;
+
+
+                    label {
+                        width: 151px;
+                        display: inline-block;
+                        text-align: right;
+                        color: #666;
+                        font-size: 12px;
+                        // text-align: center;
+                    }
+
+                    .HY {
+                        font-size: 12px;
+                        height: 30px;
+                        text-align: center;
+                    }
+
+                    span {
+                        font-size: 12px;
+                    }
+
+                    input {
+                        width: 310px;
+                        height: 30px;
+                        line-height: 30px;
+                        background-color: #FFFFFF;
+                        border: #cccccc solid 1px;
+                        padding-left: 20px;
+                        color: #666666;
+                        font-size: 15px;
+                        margin-left: 10px;
+                    }
+
+                    p {
+                        text-align: left;
+                        color: #666;
+                        font-size: 12px;
+                        margin-left: 165px;
+                    }
+
+                    .tp {
+                        width: 122px;
+                    }
+                }
+
+
+                .form-item {
+                    height: 50px;
+                    text-align: center;
+
+                    label {
+                        font-size: 12px;
+                    }
+
+                    a {
+                        font-size: 12px;
+                    }
+
+                    .button {
+                        width: 328px;
+                        height: 36px;
+                        border: 1px solid #ccc;
+                    }
+                }
+
+                .agree {
+                    margin-left: 55px;
+                }
+            }
+
+        }
     }
 
     // 底部部分
