--- a/page/css/register.scss
+++ b/page/css/register.scss
@@ -269,6 +269,9 @@
             height: 400px;
             background: url(../images/01/类目bg_1.png);
             display: none;
+            position: absolute;
+            z-index: 10;
+
 
             li {
                 height: 50px;
