--- a/page/css/home-pasge.scss
+++ b/page/css/home-pasge.scss
@@ -277,15 +277,80 @@
                 background: #fff;
             }
 
-            li {
+            // .uL {
+
+
+
+
+            // }
+
+            .xt_li {
                 height: 50px;
                 width: 100%;
+
+
+
+                // -----------
+
+                .inServerMenuB {
+                    display: none;
+                }
+
+                .xq-block {
+                    display: block;
+                }
+
+                .inServerMenuB {
+                    opacity: .9;
+                    width: 607px;
+                    height: 396px;
+                    border-top: #ccc solid 1px;
+                    border-bottom: #ccc solid 1px;
+                    border-right: #ccc solid 1px;
+                    background: #fff;
+                    position: absolute;
+                    top: 157px;
+                    left: 265px;
+                    padding: 20px 20px;
+                    box-sizing: border-box;
+                    z-index: 20;
+
+
+
+
+
+                    li {
+                        margin-bottom: 12px;
+
+                        h3 {
+                            font-size: 14px;
+                            font-weight: bold;
+                            color: #333;
+                            padding-bottom: 2px;
+                        }
+
+                        a {
+                            font-size: 12px;
+                            padding-right: 2px;
+                            line-height: 12px;
+                            color: #666;
+                            margin-right: 8px;
+                        }
+
+
+
+
+                    }
+
+                }
+
+                // ----------------
 
                 &:hover a {
                     color: #FF3D3B;
                 }
 
-                a {
+                .nin {
                     font-size: 14px;
                     color: #fff;
                     line-height: 50px;
@@ -294,6 +359,7 @@
                     width: 100%;
                     height: 100%;
 
+
                     font {
                         display: block;
                         width: 100%;
@@ -301,7 +367,7 @@
                     }
                 }
 
-                .x1 {
+                &:nth-child(1) {
                     background: url(../images/01/icon2.png)no-repeat 15px -43px;
 
                     &:hover {
@@ -309,7 +375,7 @@
                     }
                 }
 
-                .x2 {
+                &:nth-child(2) {
                     background: url(../images/01/icon2.png)no-repeat 15px -143px;
 
                     &:hover {
@@ -317,7 +383,7 @@
                     }
                 }
 
-                .x3 {
+                &:nth-child(3) {
                     background: url(../images/01/icon2.png)no-repeat 15px -240px;
 
                     &:hover {
@@ -325,7 +391,7 @@
                     }
                 }
 
-                .x4 {
+                &:nth-child(4) {
                     background: url(../images/01/icon2.png)no-repeat 15px -341px;
 
                     &:hover {
@@ -333,7 +399,7 @@
                     }
                 }
 
-                .x5 {
+                &:nth-child(5) {
                     background: url(../images/01/icon2.png)no-repeat 15px -441px;
 
                     &:hover {
@@ -341,7 +407,7 @@
                     }
                 }
 
-                .x6 {
+                &:nth-child(6) {
                     background: url(../images/01/icon2.png)no-repeat 15px -542px;
 
                     &:hover {
@@ -349,7 +415,7 @@
                     }
                 }
 
-                .x7 {
+                &:nth-child(7) {
                     background: url(../images/01/icon2.png)no-repeat 15px -641px;
 
                     &:hover {
@@ -357,7 +423,7 @@
                     }
                 }
 
-                .x8 {
+                &:nth-child(8) {
                     background: url(../images/01/icon2.png)no-repeat 15px -741px;
 
                     &:hover {
@@ -365,59 +431,9 @@
                     }
                 }
             }
+
         }
 
-        .inServerMenuList {
-
-
-            .inServerMenuB {
-                display: none;
-            }
-
-            .xq-block {
-                display: block;
-            }
-
-            .inServerMenuB {
-                opacity: .9;
-                width: 607px;
-                height: 396px;
-                border-top: #ccc solid 1px;
-                border-bottom: #ccc solid 1px;
-                border-right: #ccc solid 1px;
-                background: #fff;
-                position: absolute;
-                top: 157px;
-                left: 265px;
-                padding: 20px 20px;
-                box-sizing: border-box;
-                z-index: 20;
-
-
-
-
-
-                li {
-                    margin-bottom: 12px;
-
-                    h3 {
-                        font-size: 14px;
-                        font-weight: bold;
-                        color: #333;
-                        padding-bottom: 2px;
-                    }
-
-                    a {
-                        font-size: 12px;
-                        padding-right: 2px;
-                        line-height: 12px;
-                        color: #666;
-                        margin-right: 8px;
-                    }
-                }
-
-            }
-        }
     }
 
     // 内容部分
@@ -547,10 +563,15 @@
             width: 100%;
             background: #f5f5f5;
 
+
+
             .floor_1 {
                 width: 100%;
                 margin-top: 20px;
                 background: #f5f5f5;
+
+
+
 
 
                 .f_title {
@@ -567,7 +588,10 @@
                         color: #ef0a4a;
                         // background: url(../images/01/001.png);
                         margin-right: 15px;
+
+
                     }
+
 
                     b {
                         font-size: 18px;
@@ -577,6 +601,27 @@
                         font-weight: normal;
                         color: #f02e4b;
                     }
+
+                    .mQ {
+
+                        float: right;
+
+                        li {
+                            width: 108px;
+                            background: #fff;
+                            line-height: 38px;
+                            float: left;
+                            text-align: center;
+
+                            &:hover {
+                                border-left: solid 2px #0099cc;
+                                border-right: solid 2px #0099cc;
+                                border-top: solid 2px #0099cc;
+                            }
+                        }
+
+
+                    }
                 }
 
                 .f_con {
@@ -584,22 +629,41 @@
                     height: 448px;
                     border-top: 2px solid #ef0a4a;
                     margin-top: 5px;
+                    position: relative;
 
                     .f_con_l {
                         float: left;
                         width: 299px;
                         height: 448px;
-                        position: relative;
+                        // position: relative;
                         overflow: hidden;
                         background: #ccc;
+
+                        .swiper-wrapper {
+                            width: 100%;
+                        }
                     }
 
+                    a {
+                        display: inline-block;
+                        width: 299px;
+                    }
+
+
+
                     .f_con_r {
+                        width: 910px;
+                        background: #ccc;
+                        position: absolute;
+                        right: -10px;
+                        top: 0px;
+
 
                         li {
                             float: left;
                             margin-right: 1px;
                             margin-bottom: 1px;
+
                         }
                     }
                 }
